<?xml version="1.0"?>
<package format="3">
  <name>mujoco_ros_sim</name>
  <version>0.0.1</version>
  <description>ControllerInterface + factory + Python adapter + loader node + MuJoCo sim runner</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <!-- Build -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- C++ deps -->
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>pybind11_vendor</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>
  <depend>mujoco_ros_sim_msgs</depend>

  <!-- Python runtime deps for mujoco_sim.py -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>

  <export>
    <pluginlib plugin="${prefix}/plugins.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
